--- a/index.html
+++ b/index.html
@@ -434,10 +434,10 @@
                 <a href="mailto:ma.baku@hotmail.com" class="tech-item">
                     <i class="fas fa-envelope"></i> Email
                 </a>
-                <a href="https://linkedin.com" class="tech-item">
+                <a href="https://www.linkedin.com/in/mahammad-a-039a83258" class="tech-item">
                     <i class="fab fa-linkedin"></i> LinkedIn
                 </a>
-                <a href="https://github.com" class="tech-item">
+                <a href="https://github.com/mq917" class="tech-item">
                     <i class="fab fa-github"></i> GitHub
                 </a>
             </div>
